# developer_joyofenergy_c

./: CMakeLists.txt  README.md
meter/: configuration.h  meter.c  meter.h
meter/adapter/protocol/: CMakeLists.txt  endpoint.h  message.h  price_plan.c  price_plan.h  protocol.c  protocol.h  reading.c  reading.h
meter/adapter/schedule/: schedule.h
meter/app/service/: CMakeLists.txt  electricity_reading_service.h  price_plan_service.c  price_plan_service.h
meter/domain/: electricity_reading.h  price_plan.h
meter/hal/: bsp.h  clock.h  endpoint.h  message.h  metrology.h
test/: CMakeLists.txt  endpoint.cpp  readings.cpp
test/mocks/: CMakeLists.txt  bsp.c  bsp.h  bus_controller.cpp  bus_controller.h  bus_message_queue.c  bus_message_queue.h  clock.c  clock.h  endpoint.c  endpoint.h  metrology.c  metrology.h
